components/styles/Modal.module.scss
@import 'variable';

.overlay {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #33333380;
  z-index: 10000;

  .content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 860px;
    height: 400px;
    max-height: calc(100vh - 40px);
    margin: 0 100px;
    border-radius: 4px;
    padding: 20px 40px;
    background-color: #ffffff;
    z-index: inherit;
    overflow: scroll;

    .closeBtn {
      position: relative;
      color: #ffffff;
      background-color: #878787;
      min-width: 100px;
      margin: 0 auto;
      border: 0;
      margin-top: 24px;
      border-radius: 4px;
      padding: 8px 20px 8px 32px;
      transition: 0.3s;
      outline: 0;
      cursor: pointer;

      &:hover,
      &:active {
        color: #520000;
        background-color: #ff947e;

        &::before,
        &::after {
          background-color: #520000;
        }
      }

      &::before,
      &::after {
        position: absolute;
        display: inline-block;
        content: '';
        width: 12px;
        height: 2px;
        background-color: #ffffff;
        top: 50%;
        margin-top: -1px;
        left: 12px;
        transition: 0.3s;
      }
      &::before {
        transform: rotate(45deg);
      }
      &::after {
        transform: rotate(-45deg);
      }
    }
  }
}

@include mq(md) {
  .overlay {
    .content {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      width: 100%;
      height: auto;
      min-height: auto;
      max-height: calc(100vh - 80px);
      margin: 0 10px;
      padding: 18px 16px;
    }
  }
}

